# self-inc-first

./: CMakeLists.txt  README.md
src/: IncludeFinderAction.cpp  IncludeFinderAction.hpp  path_utils.cpp  path_utils.hpp  self-inc-first.cpp
tests/: ambiguous.cpp  bad.c  bad.cpp  conditional.cpp  good.c  good.cpp  path-bad.cpp  wrong.c  wrong.cpp
